# context-wall

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  ctxfw.oss.yaml  ctxfw.yaml.example  docker-compose.yml  publish.sh  pyproject.toml
.github/workflows/: docker.yml
demo/: .env.example  ATTACKS.md  Dockerfile.agent  Dockerfile.cre  Dockerfile.simulator  Makefile  README.md  TESTING.md  ctxfw.demo.yaml  docker-compose.yml
demo/agent/: brave_search.py  cre_client.py  main.py  requirements.txt  scenarios.py
demo/dashboard/: index.html
demo/simulator/: main.py
policy/packs/: fedramp.yaml  hipaa.yaml  soc2.yaml
sdk/python/: README.md  pyproject.toml
sdk/python/src/contextwall_sdk/: __init__.py  _anthropic.py  _openai.py  client.py  exceptions.py
sdk/python/src/cre_sdk/: __init__.py  _anthropic.py  _openai.py  client.py  exceptions.py
sdk/python/tests/: test_sdk.py
src/context_firewall/: __init__.py  config.py  metrics.py  models.py
src/context_firewall/analytics/: __init__.py  engine.py
src/context_firewall/api/: __init__.py  app.py  models.py
src/context_firewall/classifier/: __init__.py  classifier.py
src/context_firewall/cli/: __init__.py  main.py
src/context_firewall/compliance/: __init__.py  baa.py  chain.py  control_mappings.py  export.py  keys.py
src/context_firewall/control_plane/: client.py  models.py  pusher.py
src/context_firewall/daemon/: __init__.py  main.py
src/context_firewall/db/: __init__.py  connection.py  migrations.py
src/context_firewall/entropy/: __init__.py  engine.py
src/context_firewall/graph/: __init__.py  engine.py
src/context_firewall/lint/: engine.py
src/context_firewall/mcp/: __init__.py  server.py
src/context_firewall/policy/: __init__.py  engine.py
src/context_firewall/policy/detectors/: injection.py  patterns.py
src/context_firewall/policy/dsl/: evaluator.py  loader.py  types.py
src/context_firewall/provenance/: __init__.py  engine.py  models.py
src/context_firewall/proxy/: __init__.py  router.py  scanner.py  tokens.py
src/context_firewall/runtime/: __init__.py  engine.py
src/context_firewall/source/: __init__.py  registry.py  types.py
src/context_firewall/synthesizer/: __init__.py  synthesizer.py
src/context_firewall/trust/: __init__.py  engine.py  signals.py
